BsnToOclc now extends abstract class AlephBsnMapper.

--- a/config/bsn_to_oclc.properties
+++ b/config/bsn_to_oclc.properties
@@ -1,1 +1,3 @@
-sqlPrefix: SELECT OCLC_MASTER FROM HARVARD_PROJECT_OCLC_KEYS WHERE ALEPH_BSN = 
+table: HARVARD_PROJECT_OCLC_KEYS
+column: OCLC_MASTER
+bsnColumn: ALEPH_BSN 
