--- a/build.xml
+++ b/build.xml
@@ -35,8 +35,19 @@
   
   <target name="jar" depends="compile" description="Generate the distribution.">
     <fileset dir="${dist}/lib" id="dist.jars" includes="**/*.jar" />
-    <jar jarfile="${dist}/lib/nyu-libraries-primo-plugins-${DSTAMP}.jar">
+    <pathconvert property="manifest.classpath" refid="dist.jars" pathsep=" " /> 
+    <jar jarfile="${dist}/lib/nyu-libraries-primo-plugins-${DSTAMP}.jar" indexMetaInf="true">
       <fileset dir="${build}"/>
+      <manifest>
+        <attribute name="Main-Class" value="edu.nyu.libraries.primo.plugins.Index" />
+        <attribute name="Class-Path" value="${manifest.classpath}" />
+        <section name="edu.nyu.libraries.primo.plugins.Index">
+          <attribute name="Specification-Title" value="Primo Plugin Datawarehouse Properties" />
+          <attribute name="Specification-Version" value="1.0" />
+          <attribute name="Implementation-Title" value="edu.nyu.libraries" />
+          <attribute name="Implementation-Version" value="build-${DSTAMP}" />
+        </section>
+      </manifest>
       <metainf dir="${config}" includes="**/*.properties" />
     </jar>
     <symlink link="${dist}/nyu-libraries-primo-plugins.jar" resource="${dist}/lib/nyu-libraries-primo-plugins-${DSTAMP}.jar" />
