--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.0</version>
+      <version>[4.8.2,)</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -43,12 +43,6 @@
       <artifactId>sqljdbc4</artifactId>
       <version>4.0</version>
     </dependency>
-    <!-- Needs to be referenced in local repository -->
-<!--     <dependency>
-      <groupId>edu.nyu.library</groupId>
-      <artifactId>datawarehouse</artifactId>
-      <version>1.0</version>
-    </dependency> -->
   </dependencies>
   <build>
     <pluginManagement>
