--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
 	<groupId>edu.nyu.library</groupId>
 	<artifactId>primo-plugins</artifactId>
-	<version>1.0.0-alpha.1</version>
+	<version>1.0.0-alpha.2</version>
 	<packaging>jar</packaging>
 
 	<name>primo-plugins</name>
@@ -100,7 +100,7 @@
 		<connection>scm:git:git://github.com:NYULibraries/primo-plugins.git</connection>
 		<url>scm:git:git@github.com:NYULibraries/primo-plugins.git</url>
 		<developerConnection>scm:git:git@github.com:NYULibraries/primo-plugins.git</developerConnection>
-	  <tag>primo-plugins-1.0.0-alpha.1</tag>
+	  <tag>HEAD</tag>
   </scm>
 	<organization>
 		<name>NYULibraries</name>
