--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,7 @@
 			</plugins>
 		</pluginManagement>
 		<plugins>
-			<plugin>
+<!-- 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
 				<version>2.1.2</version>
@@ -77,11 +77,11 @@
 					</execution>
 				</executions>
 			</plugin>
-			<plugin>
+ -->			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
 				<version>2.8.1</version>
-				<executions>
+<!-- 				<executions>
 					<execution>
 						<id>attach-javadocs</id>
 						<goals>
@@ -89,7 +89,7 @@
 						</goals>
 					</execution>
 				</executions>
-			</plugin>
+ -->			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-deploy-plugin</artifactId>
