--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,11 @@
 			<version>[4.8.2,)</version>
 			<scope>test</scope>
 		</dependency>
+    <dependency>
+      <groupId>edu.nyu.library</groupId>
+      <artifactId>datawarehouse</artifactId>
+      <version>1.0.0-alpha.1</version>
+    </dependency>
 	</dependencies>
 	<build>
     <pluginManagement>
